# virtual-heart

./: .gitignore  0.bootstrap.js  Cargo.toml  LICENSE  README.md  bootstrap.js
.github/workflows/: deploy.yml
src/: lib.rs
src/oned_models/: br1d.rs  fox1d.rs
src/zerod_models/: br0d.rs
web/: index.html  index.js  models.json  package.json
