[package]
name = "virtual-heart"
version = "0.0.1"
authors = ["Harshvardhan Baldwa <harshbaldwa@gmail.com>"]
edition = "2021"
description = "Interactive Website for Virtual Heart Models"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.90"
js-sys = "0.3.67"
plotters = "^0.3.5"
plotters-canvas = "^0.3.0"
web-sys = { version = "0.3.67", features = ["HtmlCanvasElement", "console"] }
colorgrad = "^0.6.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"